--- a/css/_features.scss
+++ b/css/_features.scss
@@ -1,23 +1,16 @@
 .features {
-  width: min(1157px, 95%);
-  height: 693px;
-  background: rgba(100, 100, 100, .01);
+  width: $features-width;
+  height: $features-height;
+  background: $features-bgcolor;
   position: relative;
+
   .first-features-title {
     position: absolute;
     height: 16px;
     left: 0%;
     right: 90.67%;
     top: calc(50% - 16px / 2 - 338.5px);
-
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 16px;
-    /* identical to box height, or 100% */
-
-    color: #87A1B6;
+    @extend %first-features-title-font;
   }
 
   .main-features-title {
@@ -26,15 +19,7 @@
     left: 0%;
     right: 67.76%;
     top: calc(50% - 52px / 2 - 286.5px);
-
-    font-family: Nunito Sans;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 40px;
-    line-height: 52px;
-    /* identical to box height, or 130% */
-
-    color: #16133E;
+    @extend %main-features-title-font;
   }
 
   .features-description {
@@ -43,15 +28,7 @@
     left: 0%;
     right: 39.93%;
     top: calc(50% - 16px / 2 - 237.5px);
-
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 16px;
-    /* identical to box height, or 89% */
-
-    color: #5A7184;
+    @extend %features-description-font;
   }
 
   .img-placeholder-left {
@@ -61,7 +38,7 @@
     top: 30.01%;
     bottom: 0%;
 
-    background: url(../img/features-img-1.png);
+    background: $img-placeholder-left-bgimg;
     border-radius: 8px;
 
     em {
@@ -71,15 +48,7 @@
       left: 25%;
       right: 18%;
       /*top: calc(50% - 96px/2 + 253.5px);*/
-      bottom: 10%;
-      font-family: Roboto;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 36px;
-      line-height: 48px;
-      /* or 133% */
-
-      color: #FFFFFF;
+      @extend %features-img-placeholder-left-font;
     }
   }
 
@@ -90,7 +59,7 @@
     top: 30.01%;
     bottom: 0%;
 
-    background: url(../img/features-img-2.png);
+    background: $img-placeholder-right-bgimg;
     border-radius: 8px;
 
     em {
@@ -101,14 +70,7 @@
       right: 18%;
       /*top: calc(50% - 96px/2 + 253.5px);*/
       bottom: 10%;
-      font-family: Roboto;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 36px;
-      line-height: 48px;
-      /* or 133% */
-
-      color: #FFFFFF;
+      @extend %features-img-placeholder-right-font;
     }
   }
 
