--- a/css/_price-plan.scss
+++ b/css/_price-plan.scss
@@ -1,7 +1,7 @@
 .price-plan {
-  width: min(1140px, 95%);
-  height: 610px;
-  background: rgba(100, 100, 100, .01);
+  width: $price-plan-width;
+  height: $price-plan-height;
+  background: $price-plan-bgcolor;
   position: relative;
   em.main-prices-title {
     position: absolute;
@@ -9,15 +9,7 @@
     left: 0%;
     right: 27.37%;
     top: calc(50% - 52px / 2 - 279px);
-
-    font-family: Nunito Sans;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 40px;
-    line-height: 52px;
-    /* identical to box height, or 130% */
-
-    color: #16133E;
+    @extend %main-prices-title-font;
   }
 
   em.prices-description {
@@ -26,22 +18,13 @@
     left: 0%;
     right: 39.04%;
     top: calc(50% - 16px / 2 - 230px);
-
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 16px;
-    /* identical to box height, or 89% */
-
-    color: #5A7184;
+    @extend %prices-description-font;
   }
 
   .started-plan {
     position: absolute;
-    /*background: #FFFFFF;*/
-    background: rgba(100, 100, 100, .03);
-    box-shadow: 0px 2px 35px rgba(0, 0, 0, 0.03);
+    background: $started-plan-bgcolor;
+    box-shadow: $started-plan-shadow;
     border-radius: 0px 0px 8px 8px;
 
     .plan-name {
@@ -51,14 +34,7 @@
       left: 34%;
       right: 34%;
       top: 15%;
-
-      font-family: Roboto;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 24px;
-      line-height: 32px;
-      /* identical to box height, or 133% */
-      color: #16133E;
+      @extend %prices-plan-name-font;
     }
 
     .plan-cost {
@@ -69,14 +45,8 @@
       right: 39%;
       top: 32%;
       margin: 0 auto;
-
-      font-family: Roboto;
-      font-style: normal;
-      font-weight: bold;
-      font-size: 40px;
-      line-height: 52px;
-      /* identical to box height, or 130% */
       text-align: center;
+      @extend %prices-plan-cost-font;
     }
 
     .plan-periodicity {
@@ -87,15 +57,7 @@
       right: 40%;
       margin: 0 auto;
       top: 42%;
-
-      font-family: Roboto;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 16px;
-      line-height: 24px;
-      /* identical to box height, or 150% */
-      color: #87A1B6;
-      margin: 0 auto;
+      @extend %prices-plan-periodicity-font;
     }
 
     .plan-description {
@@ -106,15 +68,8 @@
       right: 85px;
       top: 54%;
       margin: 0 auto;
-
-      font-family: Roboto;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 16px;
-      line-height: 28px;
-      /* or 175% */
       text-align: center;
-      color: #87A1B6;
+      @extend %prices-plan-description-font;
     }
 
     .button-get-started {
@@ -125,8 +80,8 @@
       border-radius: 25px;
       padding: 8px 20px;
       margin: 0 auto;
-      border: 2px solid black;
-      background: lightyellow;
+      border: 2px solid $button-get-started-border;
+      background: $button-get-started-bgcolor;
       width: 181px;
       height: 50px;
     }
@@ -139,11 +94,11 @@
     bottom: 0%;
 
     .thick-line {
-      background: #0593FA;
+      background: $started-plan-first-thick-line;
     }
 
     .plan-cost {
-      color: #0593FA;
+      color: $started-plan-first-thick-line;
     }
   }
 
@@ -154,11 +109,11 @@
     bottom: 0%;
 
     .thick-line {
-      background: #56CBAE;
+      background: $started-plan-second-thick-line;
     }
 
     .plan-cost {
-      color: #56CBAE;
+      color: $started-plan-second-thick-line;
     }
   }
 
@@ -169,11 +124,11 @@
     bottom: 0%;
 
     .thick-line {
-      background: #FA6770;
+      background: $started-plan-third-thick-line;
     }
 
     .plan-cost {
-      color: #FA6770;
+      color: $started-plan-third-thick-line;
     }
   }
 
