--- a/css/style.scss
+++ b/css/style.scss
@@ -1,11 +1,12 @@
-@mixin main-sides-padding {
-  padding-left: calc(16px + (60 - 16) * ((100vw - 320px) / (1200 - 320)));
-  padding-right: calc(16px + (60 - 16) * ((100vw - 320px) / (1200 - 320)));
-  @media (min-width: 1200px) {
-    padding-left: 60px;
-    padding-right: 60px;
-  }
-}
+
+
+@import '_var';
+
+@import '_bgcolor-var';
+
+@import '_font-extends';
+
+@import '_mixins';
 
 @import '_header';
 
@@ -24,10 +25,10 @@
 body {
   .main-layout {
     position: relative;
-    width: min(95%, 1200px);
-    height: 4294px;
+    width: $main-layout-width;
+    height: $main-layout-height;
     margin: 0 auto;
-    background: rgba(238, 220, 220, .01);
+    background: $main-layout-bgcolor;
 
     display: grid;
     grid-template-columns: 1fr;
@@ -77,7 +78,7 @@ body {
     }
 
     * {
-      border: 1px solid #16133E;
+      //border: 1px solid #16133E;
     }
   }
 }
