fixed class naming, refactored HTML

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ header {
     background: rgba(100, 100, 100, .01);
 }
 
-.price-plan {
+.price {
     position: absolute;
     width: 1140px;
     height: 610px;
