grid flex position

--- a/css/_banner.scss
+++ b/css/_banner.scss
@@ -1,144 +1,6 @@
 .banner {
-  width: $banner-width;
-  height: $banner-height;
-  background: $banner-bgcolor;
-  position: relative;
-  .right-arrow {
-    position: absolute;
-    width: 22px;
-    height: 22px;
-    left: 16px;
-    top: 16px;
-    z-index: 5;
-    background: $right-arrow-bgimg;
-    /*transform: matrix(-1, 0, 0, 1, 0, 0);*/
-  }
+  width: 1175px;
+  height: 420px;
 
-  .left-arrow {
-    position: absolute;
-    width: 22px;
-    height: 22px;
-    left: 16px;
-    top: 16px;
-    z-index: 5;
-    background: $left-arrow-bgimg;
-    /*transform: matrix(-1, 0, 0, 1, 0, 0);*/
-  }
-
-  .right-arrow-bg {
-    position: absolute;
-    width: 55px;
-    height: 55px;
-    left: 1148px;
-    top: 192px;
-    z-index: 3;
-    background: $arrow-bgcolor;
-    border-radius: 5px;
-  }
-
-  .left-arrow-bg {
-    position: absolute;
-    width: 55px;
-    height: 55px;
-    left: 568px;
-    top: 192px;
-    z-index: 3;
-    background: $arrow-bgcolor;
-    border-radius: 5px;
-  }
-
-  .rectangle-x {
-    position: absolute;
-    width: 580px;
-    height: 420px;
-    /*left: 594px;*/
-    right: 0;
-    top: 0px;
-    background: $rectangle-x-bgimg;
-    border-radius: 8px;
-  }
-
-  .view-projects-in-banner {
-    position: absolute;
-    width: 169px;
-    height: 46px;
-    /*left: 158px;*/
-    left: 0px;
-    /*top: 496px;*/
-    top: 330px;
-
-  }
-
-  .view-projects-in-banner > a {
-    position: absolute;
-    left: 0px;
-    right: 0px;
-    top: 0px;
-    bottom: 0px;
-
-    background: $view-projects-in-banner-link-bgcolor;
-    border-radius: 8px;
-  }
-
-  .view-projects-in-banner > a > em {
-    position: absolute;
-    height: 16px;
-    left: 20.71%;
-    right: 20.71%;
-    top: calc(50% - 16px / 2);
-    @extend %view-projects-in-banner-font;
-  }
-
-  .learn-more-in-banner {
-    position: absolute;
-    width: 152px;
-    height: 46px;
-    /*left: 350px;*/
-    left: 192px;
-    /*top: 496px;*/
-    top: 330px;
-
-  }
-
-  .learn-more-in-banner > a {
-    position: absolute;
-    left: 0px;
-    right: 0px;
-    top: 0px;
-    bottom: 0px;
-
-    border: 2px solid $learn-more-in-banner-link-border;
-    border-radius: 8px;
-  }
-
-  .learn-more-in-banner > a > em {
-    position: absolute;
-    height: 16px;
-    left: 23.03%;
-    right: 23.03%;
-    top: calc(50% - 16px / 2);
-    @extend %learn-more-in-banner-font;
-  }
-
-  .lorem-ipsum-in-banner {
-    position: absolute;
-    width: 455px;
-    height: 62px;
-    /*left: 158px;*/
-    left: 0px;
-    /*top: 398px;*/
-    top: 220px;
-    @extend %lorem-ipsum-in-banner-font;
-  }
-
-  .freehand-your-brand {
-    position: absolute;
-    width: 455px;
-    height: 204px;
-    /*left: 158px;*/
-    left: 0;
-    /*top: 169px;*/
-    top: 0;
-    @extend %freehand-your-brand-font;
-  }
+  //background: rgba(100, 100, 100, .01);
 }
