--- a/css/_features.scss
+++ b/css/_features.scss
@@ -1,77 +1,6 @@
 .features {
-  width: $features-width;
-  height: $features-height;
-  background: $features-bgcolor;
-  position: relative;
+  width: 1157px;
+  height: 693px;
 
-  .first-features-title {
-    position: absolute;
-    height: 16px;
-    left: 0%;
-    right: 90.67%;
-    top: calc(50% - 16px / 2 - 338.5px);
-    @extend %first-features-title-font;
-  }
-
-  .main-features-title {
-    position: absolute;
-    height: 52px;
-    left: 0%;
-    right: 67.76%;
-    top: calc(50% - 52px / 2 - 286.5px);
-    @extend %main-features-title-font;
-  }
-
-  .features-description {
-    position: absolute;
-    height: 16px;
-    left: 0%;
-    right: 39.93%;
-    top: calc(50% - 16px / 2 - 237.5px);
-    @extend %features-description-font;
-  }
-
-  .img-placeholder-left {
-    position: absolute;
-    left: 0%;
-    right: 52.03%;
-    top: 30.01%;
-    bottom: 0%;
-
-    background: $img-placeholder-left-bgimg;
-    border-radius: 8px;
-
-    em {
-      display: block;
-      position: absolute;
-      height: 96px;
-      left: 25%;
-      right: 18%;
-      /*top: calc(50% - 96px/2 + 253.5px);*/
-      @extend %features-img-placeholder-left-font;
-    }
-  }
-
-  .img-placeholder-right {
-    position: absolute;
-    left: 52.03%;
-    right: 0%;
-    top: 30.01%;
-    bottom: 0%;
-
-    background: $img-placeholder-right-bgimg;
-    border-radius: 8px;
-
-    em {
-      display: block;
-      position: absolute;
-      height: 96px;
-      left: 25%;
-      right: 18%;
-      /*top: calc(50% - 96px/2 + 253.5px);*/
-      bottom: 10%;
-      @extend %features-img-placeholder-right-font;
-    }
-  }
-
+  //background: rgba(100, 100, 100, .01);
 }
