--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -1,154 +1,6 @@
-footer {
-  width: $footer-width;
-  height: $footer-height;
-  background: $footer-bgcolor;
-  position: relative;
-  display: grid;
-  grid-template-columns: 30% 1fr 1fr 30%;
-  grid-template-rows: 1fr 20%;
-  gap: 3px 3px;
-  grid-template-areas:
-    "general services company contacts"
-    "copyright copyright copyright copyright";
+.footer {
+  width: 1440px;
+  height: 574px;
 
-  .general-info {
-    grid-area: general;
-    position: relative;
-
-    .logo {
-      position: absolute;
-      width: 194.71px;
-      height: 27.6px;
-      left: 10%;
-      top: 20%;
-    }
-
-    em.general-info-description {
-      position: absolute;
-      height: 84px;
-      left: 10%;
-      right: 10%;
-      top: calc(50% - 84px / 2 - 20px);
-      @extend %foo-general-info-description-font;
-    }
-
-    .network-links {
-      position: absolute;
-      top: 65%;
-      left: 10%;
-
-      a {
-        margin: 5px;
-      }
-    }
-  }
-
-  .services {
-    grid-area: services;
-    position: relative;
-
-    em {
-      position: absolute;
-      height: 22px;
-      left: 20%;
-      top: calc(50% - 22px / 2 - 140px);
-      @extend %foo-services-em-font;
-    }
-
-    ul {
-      position: absolute;
-      left: 6%;
-      top: calc(50% - 22px / 2 - 73px);
-      list-style-type: none;
-
-      li {
-        margin-bottom: 20px;
-
-        a {
-          @extend %foo-services-ul-li-a-font;
-        }
-      }
-    }
-  }
-
-  .company {
-    grid-area: company;
-    position: relative;
-
-    em {
-      position: absolute;
-      height: 22px;
-      left: 20%;
-      top: calc(50% - 22px / 2 - 140px);
-@extend %foo-company-em-font;
-    }
-
-    ul {
-      position: absolute;
-      left: 6%;
-      top: calc(50% - 22px / 2 - 73px);
-      list-style-type: none;
-
-      li {
-        margin-bottom: 20px;
-
-        a {
-          @extend %foo-company-ul-li-a-font;
-        }
-      }
-    }
-  }
-
-  .contacts {
-    grid-area: contacts;
-    position: relative;
-
-    em {
-      position: absolute;
-      height: 22px;
-      left: 15%;
-      top: calc(50% - 22px / 2 - 140px);
-      @extend %foo-contacts-em-font;
-    }
-
-    ul {
-      position: absolute;
-      left: 6%;
-      top: calc(50% - 22px / 2 - 73px);
-      list-style-type: none;
-
-      li {
-        margin-bottom: 20px;
-        display: flex;
-        align-items: center;
-
-        a {
-          @extend %foo-contacts-ul-li-a-font;
-
-          img {
-            padding: 10px;
-          }
-        }
-
-        a.email-address {
-          font-size: 25px;
-        }
-      }
-    }
-  }
-
-  .copyright {
-    grid-area: copyright;
-    position: relative;
-    padding: 10px;
-
-    em {
-      padding: 8px;
-      position: absolute;
-      top: 35%;
-      left: 41%;
-      right: 41%;
-      color: #FFFFFF;
-    }
-  }
+  background: #16143D;
 }
