--- a/css/_service.scss
+++ b/css/_service.scss
@@ -1,116 +1,6 @@
 .service {
-  width: $service-width;
-  height: $service-height;
-  background: $service-bgcolor;
-  position: relative;
+  width: 1162px;
+  height: 529px;
 
-  .service-group-3 {
-    position: absolute;
-    left: 68.85%;
-    right: 0%;
-    top: 34.22%;
-    bottom: 0%;
-
-    border: 1px solid $service-group-border;
-    box-sizing: border-box;
-    border-radius: 8px;
-    background-color: $service-group-bgcolor;
-  }
-
-  .service-group-2 {
-    position: absolute;
-    left: 34.42%;
-    right: 34.42%;
-    top: 34.22%;
-    bottom: 0%;
-
-    border: 1px solid $service-group-border;
-    box-sizing: border-box;
-    border-radius: 8px;
-    background-color: $service-group-bgcolor;
-  }
-
-  .service-group-1 {
-    position: absolute;
-    left: 0%;
-    right: 68.85%;
-    top: 34.22%;
-    bottom: 0%;
-
-    border: 1px solid $service-group-border;
-    box-sizing: border-box;
-    border-radius: 8px;
-    background-color: $service-group-bgcolor;
-  }
-
-  .first-service-title {
-    position: absolute;
-    height: 16px;
-    left: 0%;
-    right: 89%;
-    top: calc(50% - 16px / 2 - 256.5px);
-    @extend %first-service-title-font;
-  }
-
-  .main-service-title {
-    position: absolute;
-    height: 52px;
-    left: 0%;
-    right: 67.9%;
-    top: calc(50% - 52px / 2 - 204.5px);
-    @extend %main-service-title-font;
-  }
-
-  .service-description {
-    position: absolute;
-    height: 16px;
-    left: 0%;
-    right: 40.19%;
-    top: calc(50% - 16px / 2 - 155.5px);
-    @extend %service-description-font;
-  }
-
-  .group-icon {
-    width: 46px;
-    height: 42px;
-    display: block;
-    position: absolute;
-    top: 25px;
-    left: 50px;
-    margin: 5px;
-    padding: 5px 10px;
-    border: 2px solid $group-icon-border;
-    border-radius: 8px;
-  }
-
-  .group-header {
-    position: absolute;
-    height: 52px;
-    left: 15.61%;
-    right: 131.02%;
-    top: calc(20% - 52px / 2 + 64.5px);
-    @extend %service-group-header-font;
-  }
-
-  .group-content {
-    position: absolute;
-    /*left: 72.46%;*/
-    /*right: 3.87%;*/
-    /*top: 66.16%;*/
-    /*bottom: 17.96%;*/
-    left: 42px;
-    right: 45px;
-    top: 155px;
-    bottom: 108px;
-
-  }
-
-  .group-end {
-    position: absolute;
-    height: 52px;
-    left: 11.04%;
-    right: 54.99%;
-    top: calc(51% - 52px / 2 + 134.5px);
-    @extend %service-group-end-font;
-  }
+  background: rgba(100, 100, 100, .01);
 }
