--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,88 +1,23 @@
-header {
-  width: $header-width;
-  height: $header-height;
-  background: $header-bgcolor;
-  margin: 0 auto;
-  padding: 0 1%;
-  display: grid;
-  grid-template-columns: (20%, 1fr, 1fr, 20%);
-  grid-template-rows: auto;
-  grid-template-areas:
- "logo menu menu login"
- "line line line line";
-  gap: 5px 8px;
-  align-content: space-between;
+.header {
+  width: 1159px;
+  height: 86px;
 
-  >* {
-    margin-top: 20px;
-  }
+  //background: rgba(100, 100, 100, .01);
+display: grid;
+
   .logo {
-    grid-area: logo;
-    width: 194.71px;
-    height: 27.6px;
+
   }
 
-  .header-menu {
-    grid-area: menu;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
+  .header-links {
 
-    .blog {
-      @extend %header-menu-links-size;
-      @extend %header-blog-font;
-    }
-
-    .pages {
-      @extend %header-menu-links-size;
-      @extend %header-pages-font;
-    }
-
-    .portfolio {
-      @extend %header-menu-links-size;
-      @extend %header-portfolio-font;
-    }
-
-    .home {
-      @extend %header-menu-links-size;
-      @extend %header-home-font;
-    }
   }
 
   .login {
-    grid-area: login;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    .header-login-button {
-      background: $header-login-button-bgcolor;
-      border: 2px solid $header-login-button-border;
-      border-radius: 8px;
-      width: clamp(80px, 5vw + 3rem, 180px);
-      height: 32px;
-      margin: calc(0.3rem + 0.3vw);
-      @extend %header-login-title-font;
-    }
 
-    .header-sign-in-button {
-      border: 2px solid $header-sign-in-button-border;
-      border-radius: 8px;
-      width: clamp(80px, 5vw + 3rem, 180px);
-      height: 32px;
-      margin: calc(0.3rem + 0.3vw);
-      @extend %header-sign-in-title-font;
-    }
   }
 
-  .header-line {
-    grid-area: line;
-    width: 90%;
-    height: 2px;
-    margin: 0 auto;
-    background: $header-line-bgcolor;
-
+  .line {
 
   }
 }
